turned off spellcheck for textarea

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -13,7 +13,7 @@
         <header>
             <button id="start">Start</button>
         </header>
-        <textarea id="terminal" rows="20" cols="100">$ </textarea>
+        <textarea id="terminal" rows="20" cols="100" spellcheck="false">$ </textarea>
     </body>
 
 </html>
