--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,16 +4,16 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Not</title>
+        <title>Node JS Quiz</title>
         <link rel="stylesheet" href="assets/css/style.css">
         <script defer src="assets/js/events.js"></script>
     </head>
 
     <body>
         <header>
-            <button id="start">Start</button>
+            <button id="start" title="Click to start Node.js quiz">Start</button>
         </header>
-        <textarea id="terminal" rows="20" cols="100" spellcheck="false">$ </textarea>
+        <textarea id="terminal" rows="20" cols="100" spellcheck="false"></textarea>
     </body>
 
 </html>
