--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Node JS Quiz</title>
         <link rel="stylesheet" href="assets/css/style.css">
-        <script defer src="assets/js/events.js"></script>
+        <script defer src="assets/js/events.js" charset="utf-8"></script>
     </head>
 
     <body>
