added favicon and updated background color of header

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,7 +4,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Node JS Quiz</title>
+        <title>Node.js Quiz</title>
+        <link rel="icon" href="assets/images/favicon.png" type="image/png">
         <link rel="stylesheet" href="assets/css/style.css">
         <script defer src="assets/js/events.js" charset="utf-8"></script>
     </head>
