added variables + references for hostname and port

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -7,7 +7,7 @@
         <title>Node.js Quiz</title>
         <link rel="icon" href="assets/images/favicon.png" type="image/png">
         <link rel="stylesheet" href="assets/css/style.css">
-        <script defer src="assets/js/events.js" charset="utf-8"></script>
+        <script defer type="module" src="assets/js/events.js" charset="utf-8"></script>
     </head>
 
     <body>
