updated style of page inlcuding background graphic + adjusting font size for mobile

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,7 +12,7 @@
 
     <body>
         <header>
-            <button id="start" title="Click to start Node.js quiz">Start</button>
+            <button id="start" class="start" title="Click to start Node.js quiz">Start</button>
         </header>
         <textarea id="terminal" rows="20" cols="100" spellcheck="false"></textarea>
     </body>
